[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Map_Parts/MP-17-Weap_Spawner.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Map_Parts/MP-17-Weap_Spawner_top_01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/FX/FX-20-plasma-cloud.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Map_Parts/MP-19-PowerUp_Spawner.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Curve" id=2]
max_value = 4.0
_data = [ Vector2( 0.0517241, 0.320455 ), 0.0, 8.82406, 0, 0, Vector2( 0.24911, 2.01818 ), 6.92199, 6.92199, 0, 0, Vector2( 0.491103, 2.12727 ), -6.38636, -6.38636, 0, 0, Vector2( 0.754448, 0 ), -8.2899, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=3]
radius = 15.0333

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MP-17-Weap_Spawner_top_01:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.596078 ), Color( 1, 1, 1, 0.298039 ), Color( 1, 1, 1, 0.631373 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MP-17-Weap_Spawner_top_01:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Spawn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MP-17-Weap_Spawner_top_01:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="MP-19-Power_Up_Spawner" type="Node2D"]
script = ExtResource( 4 )
scale_x = 0.8
scale_y = 0.8

[node name="Sprite_01" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
vframes = 4

[node name="Sprite_02" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
vframes = 4
frame = 1

[node name="Sprite_03" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
vframes = 4
frame = 15

[node name="MP-17-Weap_Spawner_top_01" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.596078 )
position = Vector2( 0, -32 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, -10 )
amount = 14
lifetime = 0.5
texture = ExtResource( 3 )
direction = Vector2( 1, -98 )
spread = 35.0
gravity = Vector2( 0, -98 )
initial_velocity = 98.0
scale_amount_curve = SubResource( 2 )
color = Color( 1, 1, 1, 0.235294 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -32 )
collision_layer = 983040
collision_mask = 720896
space_override = 3
gravity_point = true
gravity_vec = Vector2( 1, 1 )
gravity = 100.0
linear_damp = 10.0
angular_damp = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Out = SubResource( 5 )
anims/Spawn = SubResource( 6 )

[node name="Timer_Respawn" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer_Respawn" to="." method="_on_Timer_Respawn_timeout"]
